2007-04-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am: Changed munge.sysconfig install perms to 0644.

2007-02-05  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.8.

	* TODO: Updated.

	* HISTORY, META, NEWS: Updated for 0.5.8 release.

2007-02-03  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated copyright date range.

	* src/munged/cipher.c (HAVE_LIBGCRYPT:_cipher_init): Fixed cast
	  causing stack corruption and overwriting 'algo' on amd64.

2006-12-26  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/cipher.c (_cipher_update): Fixed compiler warning that
	  initialization discards qualifiers from pointer target type.

2006-12-25  Chris Dunlap  <cdunlap@llnl.gov>

	* NEWS: Tweaked capitalization.

2006-12-23  Chris Dunlap  <cdunlap@llnl.gov>

	* NEWS: Tweaked wording of 0.5.7 release notes.

	* : Released 0.5.7.

	* HISTORY, META, NEWS: Updated for 0.5.7 release.

2006-12-22  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/crypto.c (crypto_fini, _openssl_thread_dynlock_destroy):
	  Changed pthread_mutex_destroy() error to be nonfatal.
	* src/munged/gids.c (gids_destroy): Changed pthread_mutex_destroy()
	  error to be nonfatal.
	* src/munged/work.c (work_fini): Changed pthread_cond_destroy() and
	  pthread_mutex_destroy() errors to be nonfatal.

2006-12-21  Chris Dunlap  <cdunlap@llnl.gov>

	* NEWS, src/munged/conf.c, src/munged/munged.8.in:
	  Changed --check-group-mtime to --group-check-mtime.

	* src/munged/gids.c: Added gids map timing information to log message.

	* HISTORY, META, NEWS: Updated for 0.5.7 release.

2006-12-20  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_dump_uid_hash): Tweaked debug table header.

	* src/munged/gids.c: Removed the need for casting the gids hash key
	  uid_t to a gid_t by making the gids hash return a struct gids_head
	  that points to a singly-linked list of struct gids_nodes.

	* src/munged/munged.8.in: Tweaked notes section.

2006-12-19  Chris Dunlap  <cdunlap@llnl.gov>
